buildscript {
	ext {
		springBootVersion = '2.1.1.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'com.travelBill'
version = '1.1'
sourceCompatibility = 1.8

repositories {
	mavenCentral()
	repositories { jcenter() }
}


dependencies {
	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
	implementation('org.springframework.boot:spring-boot-starter-web')
	testImplementation('org.springframework.boot:spring-boot-starter-test')
	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
	compile "org.telegram:telegrambots:4.1"
	// https://mvnrepository.com/artifact/io.github.benas/random-beans
	compile group: 'io.github.benas', name: 'random-beans', version: '3.7.0'
	compile('com.github.xabgesagtx:telegram-spring-boot-starter:0.19')
	// https://mvnrepository.com/artifact/io.github.benas/random-beans
	compile group: 'io.github.benas', name: 'random-beans', version: '3.7.0'
	// https://mvnrepository.com/artifact/com.rainerhahnekamp/sneakythrow
	compile group: 'com.rainerhahnekamp', name: 'sneakythrow', version: '1.1.0'
	compile "org.flywaydb:flyway-core:5.2.4"
	
	testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
	testCompile('org.junit.jupiter:junit-jupiter-params:5.4.2')
	testCompile "org.mockito:mockito-core:2.21.0"
	testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
	implementation 'org.mockito:mockito-junit-jupiter:2.21.0'
	// https://mvnrepository.com/artifact/org.junit.platform/junit-platform-surefire-provider
	testCompile group: 'org.junit.platform', name: 'junit-platform-surefire-provider', version: '1.3.2'
}
